--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ wallpaper/py/wallpaper/.idea/
 wallpaper/py/wallpaper/.scrapy/
 wallpaper/py/wallpaper/err.log
 wallpaper/ios/wallpaper/Pods/
+wechat-deleted-friends/.idea/
 
